# vrp

./: .gitignore  build.ps1  build.sh  pyproject.toml
docs/: python-interface.md  vrp-studio.md
docs/python-interface/: assets-and-builders.md  concepts.md  config-and-heuristics.md  development-guide.md  examples.md  getting-started.md  internals.md  solve-bindings-and-results.md  visualization-tracker.md
docs/src/: SUMMARY.md
examples/python-interop/: README.md  TODO.md  basic.py  break_reload.py  callback.py  config_export.py  config_types.py  example.py  hyper_config.py  initial_solution.py  json_assets.py  location_index.py  multi_profile.py  objectives.py  pragmatic_types.py  relations.py  run_pragmatic_example.py  solution_inspect.py  time_dependent.py  visualization.py  visualization_dataset.py  vrp.py
vrp-cli/: pyproject.toml
vrp-cli/python/: BUILD.md  TODO.md
vrp-cli/python/tests/: test_integration.py  test_native_vrp_cli.py  test_tracker.py  test_vrp.py
vrp-cli/python/vrp_cli/: __init__.py
vrp-cli/python/vrp_cli/vis/: README.md  __init__.py  __main__.py  server.py  tracker.py
vrp-cli/python/vrp_cli/vis/frontend/: package-lock.json  package.json  vite.config.ts
vrp-cli/python/vrp_cli/vis/frontend/src/: App.vue  style.css
vrp-cli/src/: lib.rs
vrp-cli/src/commands/: solve.rs
vrp-cli/tests/unit/commands/: solve_test.rs
vrp-cli/tests/unit/extensions/analyze/: clusters_test.rs
vrp-pragmatic/benches/: pragmatic_simple.rs
vrp-studio/: README.md  deploy.ps1  deploy.sh  pyproject.toml  requirements.txt
vrp-studio/frontend/: index.html  package-lock.json  package.json  vite.config.ts
vrp-studio/frontend/public/: config.js
vrp-studio/frontend/src/: App.vue  config.ts  style.css
vrp-studio/scripts/: solomon_to_pragmatic.py
vrp-studio/vrp_studio/: __init__.py  server.py  solomon.py
(+14 files in other folders)
