[project]
name = "vrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zhaoyu", email = "zhongzhyu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "vrp-cli",
    "vrp_studio",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "vrp-cli",
    "vrp-studio",
]

[tool.uv.sources]
vrp-cli = { workspace = true }
vrp-studio = { workspace = true }
